--- a/app/src/main/res/layout/fragment_change.xml
+++ b/app/src/main/res/layout/fragment_change.xml
@@ -6,126 +6,172 @@
     android:layout_height="match_parent"
     tools:context=".FragmentChange">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/fragmentChangeScrollView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/SSF_white"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageView
-            android:id="@+id/ImageMainLogo"
-            android:layout_width="94dp"
-            android:layout_height="33dp"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="50dp"
-            android:src="@drawable/ic_ssf_logo"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <TextView
-        android:id="@+id/textMainTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="120dp"
-        android:fontFamily="@font/suit_bold"
-        android:includeFontPadding="false"
-        android:text="To-do List."
-        android:textColor="@color/SSF_black"
-        android:textSize="28sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/todoDevelop"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="12dp"
-        android:fontFamily="@font/suit_semibold"
-        android:text="Develop"
-        android:textColor="@color/SSF_black"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textMainTitle" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/developRecyclerViewCardView"
-        android:layout_width="366dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="24dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="3dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/todoDevelop">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/developRecyclerView"
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/todoDevelop" />
-    </androidx.cardview.widget.CardView>
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
-    <ImageView
-        android:id="@+id/dashLine"
-        android:layout_width="match_parent"
-        android:layout_height="1.5dp"
-        android:layout_marginTop="28dp"
-        android:src="@drawable/dash_line"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/developRecyclerViewCardView" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:background="@color/SSF_white"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-    <TextView
-        android:id="@+id/todoDesign"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="20dp"
-        android:text="Design"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/dashLine" />
+                <ImageView
+                    android:id="@+id/ImageMainLogo"
+                    android:layout_width="94dp"
+                    android:layout_height="33dp"
+                    android:layout_marginLeft="24dp"
+                    android:layout_marginTop="50dp"
+                    android:src="@drawable/ic_ssf_logo"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/designRecyclerViewCardView"
-        android:layout_width="366dp"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginRight="24dp"
-        app:cardCornerRadius="12dp"
-        app:cardElevation="3dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/todoDesign">
+            <TextView
+                android:id="@+id/textMainTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="120dp"
+                android:fontFamily="@font/suit_bold"
+                android:includeFontPadding="false"
+                android:text="Edit the To-do list"
+                android:textColor="@color/SSF_black"
+                android:textSize="28sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/designRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/todoDesign" />
-    </androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/todoDevelop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/suit_semibold"
+                android:text="Develop"
+                android:textColor="@color/SSF_black"
+                android:textSize="24sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/textMainTitle" />
 
-    <View
-        android:layout_width="0dp"
-        android:layout_height="6dp"
-        android:background="@color/SSF_orange"
-        app:layout_constraintBottom_toBottomOf="@id/textMainTitle"
-        app:layout_constraintEnd_toEndOf="@id/textMainTitle"
-        app:layout_constraintStart_toStartOf="@id/textMainTitle" />
+            <ImageButton
+                android:id="@+id/developAddButton"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="4dp"
+                android:background="@color/SSF_lightgray"
+                android:src="@drawable/ic_button_add"
+                app:layout_constraintBottom_toTopOf="@id/developRecyclerViewCardView"
+                app:layout_constraintRight_toRightOf="parent" />
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/developRecyclerViewCardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="24dp"
+                android:minHeight="240dp"
+                app:cardBackgroundColor="@color/SSF_white"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="3dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/todoDevelop">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/fragmentChangeDevelopRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/todoDevelop" />
+            </androidx.cardview.widget.CardView>
+
+            <ImageView
+                android:id="@+id/dashLine"
+                android:layout_width="match_parent"
+                android:layout_height="1.5dp"
+                android:layout_marginTop="28dp"
+                android:src="@drawable/dash_line"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/developRecyclerViewCardView" />
+
+            <TextView
+                android:id="@+id/todoDesign"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="20dp"
+                android:text="Design"
+                android:textColor="@color/black"
+                android:textSize="24sp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/dashLine" />
+
+            <ImageButton
+                android:id="@+id/designAddButton"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="4dp"
+                android:background="@color/SSF_lightgray"
+                android:src="@drawable/ic_button_add"
+                app:layout_constraintBottom_toTopOf="@id/fragmentChangeDesignRecyclerViewCardView"
+                app:layout_constraintRight_toRightOf="parent" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/fragmentChangeDesignRecyclerViewCardView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="24dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginRight="24dp"
+                android:layout_marginBottom="104dp"
+                android:minHeight="240dp"
+                app:cardBackgroundColor="@color/SSF_white"
+                app:cardCornerRadius="12dp"
+                app:cardElevation="3dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/todoDesign">
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/fragmentChangeDesignRecyclerView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/todoDesign" />
+            </androidx.cardview.widget.CardView>
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="6dp"
+                android:background="@color/SSF_orange"
+                app:layout_constraintBottom_toBottomOf="@id/textMainTitle"
+                app:layout_constraintEnd_toEndOf="@id/textMainTitle"
+                app:layout_constraintStart_toStartOf="@id/textMainTitle" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
